2008-07-29  Chong Yidong  <cyd@stupidchicken.com>

	* info/dir (File): Add mairix-el.

2008-07-27  Dan Nicolaescu  <dann@ics.uci.edu>

	Remove support for Mac Carbon.
	* mac: Remove directory.
	* make-dist:
	* configure.in:
	* README:
	* Makefile.in:
	* INSTALL: Remove code for Carbon.
	* configure: Regenerate.

2008-07-26  Adrian Robert  <Adrian.B.Robert@gmail.com>

	* Makefile.in (install-arch-dep): Fix typo in NS installation commands.

2008-07-25  Chong Yidong  <cyd@stupidchicken.com>

	* configure.in: Check for getrlimit.

	* configure: Regenerate.

2008-07-23  Dan Nicolaescu  <dann@ics.uci.edu>

	* configure.in (LD_SWITCH_SITE): Remove, set the values directly
	in src/Makefile.in.
	(static): Remove, autoconf would always comment it out anyway.
	(subprocesses): Define unconditionally.

2008-07-19  Adrian Robert  <Adrian.B.Robert@gmail.com>

	* configure.in: Apply patch from Yavor Doganov <yavor <at> gnu.org> to
	fix typo in GNUSTEP_MAKEFILES setting for HAVE_NS compilation under
	GNUstep.
	* configure: Regenerate.

2008-07-18  Kenichi Handa  <handa@m17n.org>

	* INSTALL (Complex Text Layout support libraries): Delete the
	paragraph about --enable-font-backend.

2008-07-17  Adrian Robert  <Adrian.B.Robert@gmail.com>

	* configure.in: Print out some info to user for NeXTstep builds.
	(ns-app): Remove enable option.
	(ns-self-contained): Add enable option.
	(ns_appbindir, ns_appresdir, ns_appsrc): Set them based on Cocoa or
	GNUstep, use to set install prefixes, and substitute in Makefiles.
	* configure: Regenerate.
	* Makefile.in (install-arch-dep): Perform post-install cleanup inside
	NS app bundle.

2008-07-17  Stefan Monnier  <monnier@iro.umontreal.ca>

	* configure.in: Extract and substitute GNUSTEP_MAKEFILES.

2008-07-16  Adrian Robert  <Adrian.B.Robert@gmail.com>

	* configure.in: Change GNUSTEP to NS_IMPL_GNUSTEP, COCOA to
	NS_IMPL_COCOA.
	* configure: Regenerate.

2008-07-16  Glenn Morris  <rgm@gnu.org>
